--- a/package.json
+++ b/package.json
@@ -32,19 +32,15 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.4",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "stylelint-scss": "^4.0.0"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.16.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-reporter": "^7.0.4",
-    "stylelint": "^14.1.0"
+    "prettier": "^2.4.1",
+    "sass": "^1.43.4",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard": "^24.0.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.16.0"
   }
 }
