--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-cheerio": "^1.0.0",
     "gulp-fonter": "^0.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^7.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
