--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.3.11",
+    "postcss-bem-linter": "^3.3.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-reporter": "^7.0.4",
     "prettier": "^2.4.1",
