--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Bobokhuja <bobokhuja@yandex.ru>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.16.5",
     "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "cssnano": "^5.0.10",
     "del": "^6.0.0",
@@ -41,6 +42,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.0"
   }
 }
